--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
 {
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@zeeoneofc",
-	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "bit.ly/gczeeoneofc",
-	"wa": "bit.ly/wazeeoneofc",
-	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
-	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownerNumber": "6288292201767",
+	"ownerNumberr": "6288292201767",
+	"cr": "@?",
+	"yt":"bit.ly/?",
+	"grub": "https://chat.whatsapp.com/HAB17G9Xx2CJDDqhBqsM0p",
+	"wa": "wa.me//6288292201767",
+	"donate": "bit.ly/dt?",
+	"ig": "https://instagram.com/a_alga?utm_medium=copy_link",
+	"gt": "bit.ly/gt?",	
+	"ownername": "Alga",
+	"botname":"ΛᄂGanz BOT",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @zeeoneofc "
+	"fake": " 「  Alganz  」\nCreated By @a_alga "
 }
